# NAME-Radar

./: .gitignore  CMakeLists.txt  StructUSE.h  centralwidget.cpp  centralwidget.h  convertorform.cpp  convertorform.h  convertortotxt.cpp  convertortotxt.h  heavyworkthread.cpp  heavyworkthread.h  highlightlineedit.cpp  jsonsettings.cpp  jsonsettings.h  main.cpp  mainwindow.cpp  mainwindow.h  searchnames.cpp  searchnames.h  sortfilebydate.cpp  sortfilebydate.h
Convertor/: convertormanager.cpp  convertormanager.h  convertorworker.cpp  filescanner.h  libreofficeconverter.cpp
Convertor/DadaBase/: NameRadarDB.db  databasemanager.cpp  databasemanager.h
LOP/libreOffice/App/libreoffice/program/resource/uk/LC_MESSAGES/: chart.mo  cui.mo  flt.mo  pcr.mo  sc.mo  sfx.mo  sm.mo  uui.mo
LOP/libreOffice/App/libreoffice/share/autotext/uk/: standard.bau
src/: StructUSE.h  app.rc  centralwidget.cpp  centralwidget.h  convertorform.cpp  heavyworkthread.cpp  highlightlineedit.cpp  highlightlineedit.h  jsonsettings.h  main.cpp  mainwindow.h  searchnames.h  sortfilebydate.cpp
src/Convertor/: convertorworker.cpp  convertorworker.h  filescanner.cpp  hashutils.cpp  hashutils.h  libreofficeconverter.cpp  libreofficeconverter.h
src/Convertor/DadaBase/: databasemanager.cpp  databasemanager.h
